--- a/assignments/08-23.md
+++ b/assignments/08-23.md
@@ -1,3 +1,31 @@
 # Week of August 23
 
 This assignment is due EOD on August 30, 2023.
+Requirements: Task 0 AND Task 1 AND (Task 2 OR Task 3).
+
+## Task 0: Create a personal fork of this repository and a submission python script
+
+First, fork this repository.
+Then, create a file in `python/scripts` named `netID0823.py`.
+Edit the comments at the top to tell us about yourself.
+
+## Task 1: Create and evaluate a linear predictor for video recommendation
+
+The template file includes basic code for loading KauiRec data, training a linear classifier, and evaluating its performance.
+Modify this code to use more features, make use of feature transformations, etc, and see if you can find a better performing classifier.
+Comment your code to explain your additions and report your final performance in your PR.
+
+## (pick one) Task 2: Evaluate your predictor on subgroups
+
+Average performance does not tell the whole story. 
+How good is your predictor on subgroups of users or items?
+Peruse the KauiRec documentation and use available user and item information to define subgroups.
+Report on the performance of your classifier in these groups. 
+If it performs differently, why do you think this is?
+Report on your findings in your PR. Note: you can attach figures to PRs!
+
+## (pick one) Task 3 (limited capacity): Improve course notes
+
+Select a subsection of the Supervised Learning Chapter and make improvements. 
+For example: you could create nice figures (SVGs or tikz), expand and clarify the text, add additional examples, incorporate material from this year's slides, etc.
+Use Github Issues to avoid redundancy and scope this task.
